# SCZR_face_detection

./: CMakeLists.txt  detection.cpp
