cmake_minimum_required(VERSION 3.0) 
project(detection LANGUAGES CXX)  
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable(${PROJECT_NAME} detection.cpp) 
target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_14)
target_include_directories(${PROJECT_NAME} PRIVATE include)  

# OpenCV setup find_package(OpenCV REQUIRED) 
target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBS})
